# rc-ua

./: README.md  captain-definition-api  captain-definition-strapi
api-server/: .gitignore  Dockerfile  Dockerfile.prod  README.md  pyproject.toml  requirements.txt
api-server/src/api/: app.py  schema.py
api-server/src/application/: exceptions.py
api-server/src/domain/value_objects/: weekday.py
api-server/src/mocked/: bdc_mock_data.json  bdc_mock_data_short.json
api-server/src/resources/input/i18NLocales/: i18NLocales-query.json
docs/: .$rc-ua-architecture.drawio.bkp  .$rc-ua-architecture.drawio.dtmp  001-project-scope-user-stories.md  002-user-roles.md  003-techstack.md  004-links.md  005-environment.md  006-how-to-run.md  007-todo.md  008-time-sheet-rules.md  project-scope-user-stories.md  rc-ua-architecture.drawio
docs/diagram/: rc-ua-architecture.drawio
mocked-api/: Pipfile  app.py  pyproject.toml  schema.graphql  schema.json  schema.py
mocked-api/domain/: exceptions.py
mocked-api/mocked/: bdc_mock_data.json  bdc_mock_data_short.json  mocked_blood_dotation_centers.py
mocked-api/schema_types/: address.py  blood_donation_center.py  blood_dotation_center_category.py  fruit.py  tag.py  weekday.py  work_schedule_item.py
strapi/: .gitignore  .pnp.cjs  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  package-lock.json  package.json
strapi/config/: middlewares.ts  plugins.ts  server.ts
web-client/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-client/src/: App.tsx  index.css  main.tsx
(+70 files in other folders)
